Model and Car entities added, CRUD operations added for these.